[gd_scene load_steps=3 format=3 uid="uid://bqk2q5xwvuhg7"]

[ext_resource type="Script" path="res://scripts/BattleViewer3D.gd" id="1_2k8vp"]

[sub_resource type="Environment" id="Environment_1hx8v"]
background_mode = 1
background_color = Color(0.1, 0.12, 0.16, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.35, 0.4, 1)
ambient_light_energy = 0.3

[node name="BattleViewer3D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2k8vp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainArea" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="Panel" parent="VBoxContainer/MainArea"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainArea/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="FPSLabel" type="Label" parent="VBoxContainer/MainArea/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "FPS: 60"

[node name="BotInfoLabel" type="RichTextLabel" parent="VBoxContainer/MainArea/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=16][color=white]üéØ Click on a bot to select it[/color][/font_size]"

[node name="TacticalInfoLabel" type="RichTextLabel" parent="VBoxContainer/MainArea/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MainArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MainArea/ViewportContainer"]
handle_input_locally = false
own_world_3d = true
size = Vector2i(760, 480)
render_target_update_mode = 4

[node name="CameraController" type="Node3D" parent="VBoxContainer/MainArea/ViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 25)

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/MainArea/ViewportContainer/SubViewport/CameraController"]
environment = SubResource("Environment_1hx8v")
fov = 60.0

[node name="World" type="Node3D" parent="VBoxContainer/MainArea/ViewportContainer/SubViewport"]

[node name="Lighting" type="Node3D" parent="VBoxContainer/MainArea/ViewportContainer/SubViewport"]

[node name="RightPanel" type="Panel" parent="VBoxContainer/MainArea"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainArea/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="BattleInfoLabel" type="RichTextLabel" parent="VBoxContainer/MainArea/RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="EventsLabel" type="RichTextLabel" parent="VBoxContainer/MainArea/RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="BottomPanel" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Timeline" type="HBoxContainer" parent="VBoxContainer/BottomPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BottomPanel/Timeline"]
layout_mode = 2
text = "Timeline:"

[node name="TimelineSlider" type="HSlider" parent="VBoxContainer/BottomPanel/Timeline"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer/BottomPanel"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
text = "‚ñ∂ Play"

[node name="StepBackButton" type="Button" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
text = "‚óÄ"

[node name="StepForwardButton" type="Button" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
text = "‚ñ∂"

[node name="ResetButton" type="Button" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
text = "‚Ü∫ Reset"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuitButton" type="Button" parent="VBoxContainer/BottomPanel/Toolbar"]
layout_mode = 2
text = "‚ùå Quit"

[connection signal="pressed" from="VBoxContainer/BottomPanel/Toolbar/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/BottomPanel/Timeline/TimelineSlider" to="." method="_on_timeline_slider_value_changed"]
[connection signal="drag_started" from="VBoxContainer/BottomPanel/Timeline/TimelineSlider" to="." method="_on_timeline_slider_drag_started"]
[connection signal="pressed" from="VBoxContainer/BottomPanel/Toolbar/StepBackButton" to="." method="_on_step_back_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPanel/Toolbar/StepForwardButton" to="." method="_on_step_forward_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPanel/Toolbar/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomPanel/Toolbar/QuitButton" to="." method="get_tree().quit()"]
